# modio-bot

./: .env.sample  .gitignore  Cargo.toml  README.md  bot.example.toml  build.rs  diesel.toml
.github/workflows/: ci.yml  release.yml
migrations/0000_initial_db/: up.sql
migrations/0001_events/: up.sql
migrations/0002_event_types/: down.sql  up.sql
migrations/0003_blocked/: down.sql  up.sql
migrations/0004_exclude_mods/: down.sql  up.sql
migrations/0005_fix_primary_key/: up.sql
migrations/0006_filter_tags/: down.sql  up.sql
migrations/0007_mute_users/: down.sql  up.sql
migrations/0008_drop_prefix/: down.sql  up.sql
migrations/0008_users/: up.sql
migrations/0009_messages/: down.sql  up.sql
migrations/0009_subs_guild_only/: down.sql  up.sql
migrations/0010_bigint_types/: down.sql  up.sql
migrations/0011_autocomplete_games/: down.sql  up.sql
migrations/0012_more_bigint_types/: down.sql  up.sql
migrations/0013_drop_blocked/: down.sql
migrations/0014_subs_explicit/: down.sql  up.sql
src/: bot.rs  commands.rs  config.rs  db.rs  dbl.rs  error.rs  macros.rs  main.rs  metrics.rs  schema.patch  schema.rs  tools.rs  util.rs
src/auth/: discord.rs  mod.rs  server.rs  task.rs
src/commands/: auth.rs  basic.rs  game.rs  help.rs  info.rs  mods.rs  mysubs.rs  subs.rs
src/commands/help/: about.md  game.md  games.md  mods.md  popular.md  settings-default-game.md  subs-add.md  subs-list.md  subs-mods-mute.md  subs-mods-muted.md  subs-mods-unmute.md  subs-overview.md  subs-rm.md  subs-users-mute.md  subs-users-muted.md  subs-users-unmute.md
src/db/: autocomplete.rs  messages.rs  schema.patch  schema.rs  settings.rs  subscriptions.rs  types.rs  users.rs
src/db/subscriptions/: events.rs  tags.rs
src/tasks/: dbl.rs  events.rs  games.rs  mod.rs
