[package]
name = "modbot"
version = "0.5.5"
description = """Discord bot for https://mod.io.
ModBot provides commands to search for mods and notifications about added & edited mods."""
repository = "https://github.com/nickelc/modio-bot"
license = "MIT OR Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["modio", "discord", "bot"]
edition = "2021"
rust-version = "1.65.0"
include = ["src/**/*.rs", "src/**/*.md", "LICENSE-*", "README.md", "build.rs", "migrations"]

[dependencies]
bitflags = "2.3.1"
bytesize = "1"
csv = "1.2"
dashmap = "5.4"
dotenv = "0.15"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
hyper = { version = "0.14", features = ["server"] }
pico-args = "0.5"
prometheus = { version = "0.13", default-features = false }
serde = { version = "1.0.160", features = ["derive"] }
serde_urlencoded = "0.7"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal", "sync", "time" ] }
tokio-stream = "0.1"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

# strip html tags
html5ever = "0.26.0"

# diesel
diesel = { version = "2.1.0", default-features = false, features = ["r2d2", "sqlite"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = ">=0.17.2, <0.27.0", optional = true }

# twilight
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model= "0.15"
twilight-cache-inmemory = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }
twilight-validate = "0.15"

[dependencies.modio]
version = "0.7.2"
default-features = false
features = ["rustls-tls"]

[build-dependencies]
git2 = { version = "0.17.1", default-features = false }

[features]
sqlite-bundled = ["libsqlite3-sys/bundled"]

[profile.release]
lto = true
