[package]
name = "modbot"
version = "0.6.4"
description = """Discord bot for https://mod.io.
ModBot provides commands to search for mods and notifications about added & edited mods."""
repository = "https://github.com/nickelc/modio-bot"
license = "MIT OR Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["modio", "discord", "bot"]
edition = "2021"
rust-version = "1.82.0"
include = ["src/**/*.rs", "src/**/*.md", "LICENSE-*", "README.md", "build.rs", "migrations"]

[dependencies]
bitflags = "2.8.0"
bytesize = "1.3.0"
csv = "1.3.1"
dashmap = "6.1.0"
dotenv = "0.15.0"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
pico-args = "0.5.0"
prometheus = { version = "0.13.4", default-features = false }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_urlencoded = "0.7.1"
time = { version = "0.3.37", features = ["formatting", "macros"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }

# strip html tags
html5ever = "0.29.0"

# metrics
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
http-body-util = "0.1.2"

# diesel
diesel = { version = "2.2.7", default-features = false, features = ["r2d2", "sqlite"] }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = ">=0.17.2, <0.32.0", optional = true }

# twilight
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model= "0.16.0"
twilight-cache-inmemory = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }

[dependencies.modio]
version = "0.12.1"
default-features = false
features = ["rustls-tls"]

[build-dependencies]
git2 = { version = "0.20.0", default-features = false }

[features]
sqlite-bundled = ["libsqlite3-sys/bundled"]

[profile.release]
lto = true
